--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<header>
 		<nav id="header-nav" class="navbar navbar-light">
-             <a class="navbar-brand" href="#"><h1>Food, LLC</h1></a>
+             <a class="navbar-brand" href="#"><h1>Foods I'd love to have</h1></a>
              <div>
              <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
                 aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
